# riscv-as

./: .gitignore  README.md  meson.build
assets/: definitions.schema
gperf/: hash.h  hash_utils.c  instructions.gperf  meson.build  test.gperf
include/: argparser.h  common.h  debug.h  error.h  hash.h  instruction.h  meson.build  opcodes.h  writer.h
src/: argparser.c  debug.c  error.c  hash.c  hash.h  instruction.c  main  main.c  meson.build  opcodes.c  test_opcodes.s  writer.c
test/: base.s  itest.s  load.s  pseudoins.s  rtest.s  stest.s
